<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:appcompat="http://schemas.android.com/tools">
    <item
            android:id="@+id/action_change_settings"
            android:title="@string/change_language_settings"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_remind"
            android:title="@string/open_remind"
            app:showAsAction="never"/>
    <item
            android:id="@+id/menu_search"
            android:title="@string/menu_search"
            android:icon="@drawable/ic_search_black_24dp"
            app:showAsAction="ifRoom|collapseActionView"
            app:actionViewClass="androidx.appcompat.widget.SearchView"/>/>
</menu>