<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".presentation.ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <ImageView
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/image_detail_movie"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@color/colorPrimary"/>
        <TextView
                app:layout_constraintTop_toBottomOf="@id/image_detail_movie"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/tv_detail_title_movie"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="Title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#ff000000"
                app:fontFamily="sans-serif-medium" android:layout_marginTop="16dp"/>


        <TextView
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_title_movie"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vote"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#ff000000"
                app:fontFamily="sans-serif-medium"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/avg"/>
        <TextView
                app:layout_constraintEnd_toStartOf="@+id/avg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vote"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/tv_detail_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5dp"
                android:text="decs"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="#ff000000" android:layout_marginTop="8dp"/>

        <TextView
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_title_movie"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/avg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#ff000000"
                app:fontFamily="sans-serif-medium"
                android:layout_marginTop="8dp"/>
        <TextView
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/avg"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/tv_detail_runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5dp"
                android:text="decs"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="#ff000000" android:layout_marginTop="8dp"/>

        <TextView
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_title_movie"
                app:layout_constraintStart_toEndOf="@id/avg"
                android:id="@+id/pop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pupolarity"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#ff000000"
                app:fontFamily="sans-serif-medium"
                android:layout_marginTop="8dp"/>
        <TextView
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pop"
                app:layout_constraintStart_toEndOf="@id/avg"
                android:id="@+id/tv_detail_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5dp"
                android:text="decs"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="#ff000000" android:layout_marginTop="8dp"/>


        <TextView
                app:layout_constraintTop_toBottomOf="@id/tv_detail_runtime"
                app:layout_constraintBottom_toTopOf="@id/tv_detail_release"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#ff000000"
                app:fontFamily="sans-serif-medium" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.501" android:layout_marginTop="32dp"/>

        <TextView
                app:layout_constraintTop_toBottomOf="@id/release"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/tv_detail_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5dp"
                android:text="decs"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="#ff000000" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.502"/>

        <TextView
                app:layout_constraintTop_toBottomOf="@id/tv_detail_release"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/over"
                android:text="@string/overview"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#ff000000"
                app:fontFamily="sans-serif-medium" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.501"/>

        <TextView
                android:id="@+id/tv_detail_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/over"
                app:layout_constraintStart_toStartOf="parent"
                android:lineSpacingExtra="5dp"
                android:text="decs"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="#ff000000" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
                app:layout_constraintHorizontal_bias="0.503"/>
        <ImageButton
                app:layout_constraintTop_toBottomOf="@+id/image_detail_movie"
                app:layout_constraintStart_toEndOf="@id/tv_detail_title_movie"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="0dp" app:srcCompat="@drawable/ic_movie_black_24dp"
                android:id="@+id/imageButton" android:layout_marginTop="8dp"/>
        <ProgressBar
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar" android:layout_marginTop="64dp"
                />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>